# ryzr

./: .gitkeep  Cargo.toml  README.md  justfile
.github/workflows/: bench.yml
crates/ryzr-backend/benches/: engines.rs
crates/ryzr-backend/src/: event.rs  fuse.rs  hybrid.rs  jit.rs  lib.rs  mem.rs  pack.rs  pack_jit.rs  threaded.rs
crates/ryzr-backend/tests/: differential.rs
crates/ryzr-core/benches/: simulation.rs
crates/ryzr-core/src/: backend.rs  circuit.rs  lib.rs
crates/ryzr-core/tests/: correctness.rs
crates/ryzr-gui/: Cargo.toml
crates/ryzr-gui/src/: lib.rs  main.rs
crates/ryzr-gui/tests/: editor_matrix.rs
crates/ryzr-riscv/: Cargo.toml
crates/ryzr-riscv/benches/: riscv.rs
crates/ryzr-riscv/examples/: doom_bench.rs  pack_stats.rs  perf.rs  plan_report.rs  stats.rs  where_splats.rs
crates/ryzr-riscv/src/: asm.rs  cpu.rs  emu.rs  lib.rs  programs.rs  rtl.rs
crates/ryzr-riscv/tests/: cpu.rs
docs/: PERFORMANCE.md
experiments/: pr-body.md  pr4-body.md
